[package]
name = "binance_connection"
version = "0.1.0"
edition = "2024"

[dependencies]
mongo_connect = { path = "../mongo_connect" }
mongodb = "3.2.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tungstenite = { version = "0.14", features = ["rustls-tls"]}
url = "2.5"
chrono = "0.4.42"
