[package]
name = "kraken_connection"
version = "0.1.0"
edition = "2024"

[dependencies]
mongo_connect = { path = "../mongo_connect" }
mongodb = "3.2.4"
tokio = { version = "1.46.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.2"
sha2 = "0.10.8"
hex = "0.4.3"
hmac = "0.12.1"
base64 = "0.22.1"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"