[package]
name = "polkadot_node"
version = "0.1.0"
edition = "2024"

[dependencies]
mongo_connect = { path = "../../mongo_connect" }
mongodb = "3.2.4"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.7"
blake2 = "0.10"         
twox-hash = "1.6"        
bs58 = "0.4"
hex = "0.4"
parity-scale-codec = { version = "3.0", features = ["derive"] }